fix spacing tools

--- a/_includes/css/build.css
+++ b/_includes/css/build.css
@@ -1934,6 +1934,10 @@ video {
   padding-bottom: 10rem;
 }
 
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
